--- a/tech_gain_acceleration/localisation/english/strateg_tech_addition_l_english.yml
+++ b/tech_gain_acceleration/localisation/english/strateg_tech_addition_l_english.yml
@@ -11,7 +11,7 @@
  strateg_tech_physics_3: "Quantum Gravitational Waves"
  strateg_tech_physics_3_desc: "We knew gravity and time were linked long before we reached the stars. Now, our understanding of this unique relationship has reached a tipping point, allowing us to manipulate forces on a previously unimaginable scale."
  strateg_tech_physics_4: "Thesis of Everything"
- strateg_tech_physics_4_desc: ""... therefore we postulate that the meaning of existence, and the origin and purpose of all creation can be summed up as a simple formula as follows...""
+ strateg_tech_physics_4_desc: "... therefore we postulate that the meaning of existence, and the origin and purpose of all creation can be summed up as a simple formula as follows..."
  
  strateg_tech_engineering_1: "Nanomechanics"
  strateg_tech_engineering_1_desc: "Further breakthroughs in mechanical engineering required us to descend to the nanometric scale. We are now able to manipulate physical systems in  never-before-seen ways."
